--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^2.1.4",
     "@astrojs/react": "^4.2.5",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
