--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.5",
+    "markdown-it": "^14.1.0",
     "plotly": "^1.0.6",
     "plotly.js": "^3.0.1",
     "plotly.js-dist-min": "^3.0.1",
@@ -24,6 +25,7 @@
     "react-tag-input": "^6.10.6"
   },
   "devDependencies": {
+    "@marp-team/marp-cli": "^4.1.2",
     "@types/plotly.js-dist-min": "^2.3.4",
     "@types/react-plotly.js": "^2.6.3"
   }
