--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^19.1.2",
     "astro": "^5.7.5",
     "markdown-it": "^14.1.0",
+    "partytown": "^0.0.0",
     "plotly": "^1.0.6",
     "plotly.js": "^3.0.1",
     "plotly.js-dist-min": "^3.0.1",
